2008-07-10  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/36419
	* g++.dg/eh/async-unwind1.C: New test.

2008-07-09  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/35802
	* gcc.target/mips/pr35802.c: New test.

2008-07-07  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/34963
	* g++.dg/parse/dtor13.C: New test.

2008-07-03  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/loop_optimization3.adb: New test.
	* gnat.dg/loop_optimization3_pkg.ad[sb]: New helper.

2008-07-03  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc.dg/pr28243.c: Skip on SPU.
	* gcc.dg/torture/pr25947-1.c: Likewise.
	* gcc.dg/20030702-1.c: Likewise.
	* g++.old-deja/g++.other/comdat5.C: Likewise.
	* g++.old-deja/g++.other/local-alloc1.C: Likewise.
	* g++.dg/opt/vt1.C: Likewise.

2008-07-02  Joseph Myers  <joseph@codesourcery.com>

	* gcc.target/arm/neon/polytypes.c: Use dg-message separately from
	dg-error to match separate messages.

2008-07-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	PR target/36698
	* gcc.c-torture/compile/20001226-1.c: XFAIL -O0 case on SPU.

	* gcc.dg/pr27095.c: Provide target-specific regexp for SPU.

2008-07-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* lib/compat.exp (compat-execute): Add -ffunction-sections
	and -Wl,--auto-overlay when building for spu-*-elf*.

2008-07-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc.dg/nrv3.c (S): Increase size of padding for SPU.
	* g++.dg/opt/temp1.C (struct T): Likewise.

2008-07-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc.c-torture/execute/20030222-1.x: New file.
	* gcc.dg/tree-ssa/ssa-fre-3.c: Disable test on SPU.
	* gcc.dg/lower-subreg-1.c: Likewise.

2008-07-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	SPU single-precision FP does not support subnormals:
	* gcc.c-torture/execute/ieee/mul-subnormal-single-1.x: New file.

	SPU single-precision FP does not support Inf or Nan:
	* gcc.c-torture/execute/ieee/inf-1.c: Disable "float" Inf test on SPU.