@@ -1,3 +1,8 @@
+2008-07-14  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/35492
+	* gcc.c-torture/compile/pr35492.c: New test.
+
 2008-07-10  Jakub Jelinek  <jakub@redhat.com>
 
 	PR rtl-optimization/36419
